--- a/README.org
+++ b/README.org
@@ -1,1 +1,6 @@
+PREREQUISITES:
+-clojure (https://clojure.org/)
+-leningen (https://leiningen.org/)
+-firefox and geckodriver (https://github.com/mozilla/geckodriver/releases)
 
+after installing all the software above
