--- a/README.org
+++ b/README.org
@@ -1,4 +1,5 @@
-PREREQUISITES:
+PREREQUISITES
+
 -clojure (https://clojure.org/)
 -leningen (https://leiningen.org/)
 -firefox and geckodriver (https://github.com/mozilla/geckodriver/releases)
