--- a/README.org
+++ b/README.org
@@ -1,9 +1,9 @@
-PREREQUISITES
+##PREREQUISITES
 
--clojure (https://clojure.org/)
+*clojure (https://clojure.org/)
 
--leningen (https://leiningen.org/)
+*leningen (https://leiningen.org/)
 
--firefox and geckodriver (https://github.com/mozilla/geckodriver/releases)
+*firefox and geckodriver (https://github.com/mozilla/geckodriver/releases)
 
 after installing all the software above
